// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #fcfcfc;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #435a6f;
  border-radius: 4px;
  color: #435a6f;
  padding: 1rem;
}

abbr.c4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c4 {
  font-style: italic;
}

kbd.c4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c4 {
  font-weight: bold;
}

sub.c4,
sup.c4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c4,
u.c4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c4,
cite.c4,
var.c4,
em.c4 {
  font-style: italic;
}

kbd.c4,
pre.c4,
samp.c4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c4 .c5 {
  top: 0.1em;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
    role="alert"
  >
    <span
      class="c4 c1"
    >
      Alert
    </span>
  </div>
</div>
`;

exports[`renders correctly when a palette prop is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #3926a5;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #3926a5;
  border-radius: 4px;
  color: #3926a5;
  padding: 1rem;
}

abbr.c4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c4 {
  font-style: italic;
}

kbd.c4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c4 {
  font-weight: bold;
}

sub.c4,
sup.c4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c4,
u.c4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c4,
cite.c4,
var.c4,
em.c4 {
  font-style: italic;
}

kbd.c4,
pre.c4,
samp.c4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c4 .c5 {
  top: 0.1em;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
    role="alert"
  >
    <span
      class="c4 c1"
    >
      Alert
    </span>
  </div>
</div>
`;

exports[`renders correctly when a title prop is set 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #fcfcfc;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c7 {
  top: 0.1em;
}

.c4 {
  font-weight: 600;
  margin-bottom: 0.5rem;
}

.c2 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #435a6f;
  border-radius: 4px;
  color: #435a6f;
  padding: 1rem;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c7 {
  top: 0.1em;
}

@media (max-width:480px) {
  h1.c5 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c5 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c5 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c5 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c5 {
    font-size: 1.2rem;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
    role="alert"
  >
    <h6
      class="c4 heading c5 c1"
    >
      Title
    </h6>
    <span
      class="c6 c1"
    >
      Alert
    </span>
  </div>
</div>
`;

exports[`renders correctly with a custom element 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #fcfcfc;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
  fill: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  background-color: white;
  border: 1px solid #e6e6e6;
  border-left: 4px solid #435a6f;
  border-radius: 4px;
  color: #435a6f;
  padding: 1rem;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
    role="alert"
  >
    <label>
      Alert
    </label>
  </div>
</div>
`;
